--- a/notebooks/regression.ipynb
+++ b/notebooks/regression.ipynb
@@ -11,8 +11,8 @@
      "output_type": "stream",
      "text": [
       "2.5.1+cu121\n",
-      "True\n",
-      "NVIDIA GeForce GTX 1070 Ti\n"
+      "False\n",
+      "cpu\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
     "\n",
     "print(torch.__version__)\n",
     "print(torch.cuda.is_available())\n",
-    "print(torch.cuda.get_device_name(0))"
+    "print(torch.cuda.get_device_name(0) if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
