--- a/notebooks/regression.ipynb
+++ b/notebooks/regression.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5.1+cu121\n",
+      "2.9.1+cpu\n",
       "False\n",
       "cpu\n"
      ]
@@ -26,8 +26,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ed42dc02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "4.601398195554969\n"
+     ]
+    }
+   ],
+   "source": [
+    "from optimization_double_descent.data.synthetic import RegressionDataset\n",
+    "\n",
+    "ds = RegressionDataset(1000, 100)\n",
+    "print(ds.effective_rank())\n",
+    "print(ds.condition_number())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1fc8449",
    "metadata": {},
    "outputs": [],
    "source": []
